fix(checkbox): clickable white space (#1459)
* fix(checkbox): change label display

* fix(checkbox): fix alignment

--- a/projects/ng-aquila/src/checkbox/checkbox.component.scss
+++ b/projects/ng-aquila/src/checkbox/checkbox.component.scss
@@ -14,7 +14,8 @@
     @include type-style(checkbox-small-label);
     color: v(checkbox-label-color);
     cursor: pointer;
-    display: flex;
+    display: inline-flex;
+    vertical-align: middle;
 }
 
 :host(.has-error) {
